tests/vectors/valid/array_true_42.hex
6E 72 66 31  06  02  02  03  00 00 00 00  00 00 00 2A
