tests/vectors/invalid/nonminimal_varint_len0.hex
6E 72 66 31  04  80 00
